# ai-engineering

./: .dockerignore  .gitignore  CLAUDE.md  README.md  current_learning_plan.md  pyproject.toml
.claude/sessions/: 2026-04-28-1516-beer-rag-answer-py-v01.md  2026-05-12-1531-soto-agent-glossary-fastapi-acr.md
archive/: journal.md
courses/datacamp/machine_learning/: k_nearest_neighbor.ipynb  log_regresion_autos.ipynb
courses/datacamp/zero_gpt/: gradient_descent.ipynb  linAlgBasics.ipynb
courses/datacamp/zero_gpt/data/: clean_weather.csv
courses/hands-on-ml/: chapt3_classification.ipynb  housing_prices.ipynb
courses/karpathy/: karpathy_2_makemore.ipynb  karthpathy_1.ipynb
courses/practical-stats/: chapt1.ipynb
projects/embeddings/: embeddings3.ipynb  embeddings_1.ipynb  embeddings_2.ipynb
projects/tool-calling/: seed_db.py  tool-calling-demo.ipynb  tools.py
sandbox/: synthetic_data_generator.ipynb
sandbox/beer_rag_app/: answer.py  ingest.py
soto_agent/: CONTEXT.md  Dockerfile  Makefile  app.py  requirements.txt  server.py  sf_publish.py
soto_agent/data/: ubiquitous-language.md
soto_agent/docs/handoffs/: lwc-markdown-rendering.md
soto_agent/evals/: run_evals.py  test_cases.jsonl
soto_agent/prompts/: system_prompt.md
soto_agent/scripts/: build_vault_subset.py
soto_agent/tests/: test_glossary_lookup.py
soto_agent/tools/: databricks_query.py  glossary_lookup.py  wiki.py  wiki_query.py
